--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: A Data Story
 
 # Your name to show in the footer
 author: Ralph, Oskar, Celinna, Karim @ EPFL
