--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Ralph, Oskar, Celinna, Karim @ EPFL
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Us: "aboutme"
+  About Us: "aboutus"
 
 # --- Logo --- #
 
