--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: A Data Story
+title: An Unfortunate Data Story
 
 # Your name to show in the footer
-author: Ralph, Oskar, Celinna, Karim @ EPFL
+author: Raphaël, Oskar, Celinna, Karim @ EPFL
 
 # --- List of links in the navigation bar --- #
 
