--- a/_config.yml
+++ b/_config.yml
@@ -113,8 +113,8 @@ footer-hover-col: "#0085A1"
 # instead of colour
 
 navbar-img: "cover-img: /assets/img/Background_f-01.png"
-footer-img: "cover-img: /assets/img/Background_f-01.png"
-page-img: "cover-img: /assets/img/Background_f-01.png"
+#footer-img: "cover-img: /assets/img/Background_f-01.png"
+#page-img: "cover-img: /assets/img/Background_f-01.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
